# devpulse

./: .dockerignore  .gitignore  README.md  docker-compose.yml  generate_certs.sh
backend-node/: Dockerfile  package.json  server.js
backend-python/: Dockerfile  data_processor.py  main.py  pyproject.toml  scraper_manager.py
backend-python/scrapers/: python_jobs_spider.py  quotes_selenium.py
frontend/: Dockerfile  index.html  package.json
frontend/src/components/: Dashboard.jsx  LiveLog.jsx  StatCard.jsx  TrendChart.jsx
nginx/: default.conf
nginx/certs/: RootCA.srl
